# aggregator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  biome.json  commitlint.config.ts  lint-staged.config.js  package.json  playwright.config.ts  railway.json  renovate.json  tsconfig.json  turbo.json
.claude/: settings.json
.claude/agents/: code-reviewer.md  debugger.md
.claude/commands/: check.md  commit.md  db-status.md  new-module.md  review-api.md  review-web.md  review.md
.claude/rules/: api-architecture.md  api-testing.md  api.md  architecture.md  code-style.md  frontend.md  testing.md  web-architecture.md  web-testing.md
.github/workflows/: ci.yml  deploy-api.yml  deploy-python.yml  deploy-web.yml
.husky/: commit-msg  pre-commit
.turbo/cache/: 16fb78c80c1a6330-meta.json  a09535f2fb15d72c-meta.json  a09535f2fb15d72c.tar.zst  bac2c39c801e8374-meta.json  f519c411e93874fa-meta.json
.turbo/daemon/: dafa7e5c319a858a-turbo.log.2025-12-16
apps/api/: .env.test  Dockerfile  README.md  fly.toml  package.json  railway.json
apps/python-service/: Dockerfile  fly.toml  main.py  pyproject.toml
apps/web/: .gitignore  README.md  REFACTORING-GUIDE.md  package.json  tsconfig.app.json  vite.config.ts  wrangler.toml
docs/: architecture-guide.md  data-migration-from-python.md  deployment-guide.md  deployment.md  migration-investigation.md  prisma-guide.md  prisma-migrations.md  project-architecture.md  supabase-guide.md  tanstack-query-guide.md
e2e/: auth.e2e.ts
supabase/: config.toml
supabase/migrations/: 00001_enable_rls.sql
(+200 files in other folders)
